<resources>
    <string name="app_name">EduNet</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_update">Update profile</string>
    <string name="title_community">Community</string>
    <string name="title_add_community">Add community</string>
    <string name="title_edit_community">Edit community</string>
    <string name="title_delete_community">Delete</string>
    <string name="title_admin_panel">Admin panel</string>
    <string name="title_requests">{role} requests</string>
    <string name="title_members">{role} members</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="user_avatar">User avatar</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="default_bio">Nothing to say about me</string>
    <string name="community_name">Name</string>
    <string name="community_description">Description</string>
    <string name="owner">Owner</string>
    <string name="community_avatar">Community avatar</string>
    <string name="avatar">avatar</string>
    <string name="community_delete_dialog">Do you want to delete this community?</string>
    <string name="request_admin_permissions_dialog">Do you want to request admin permissions to this community?</string>
    <string name="request_participant_permissions_dialog">Do you want to request participant permissions to this community?</string>
    <string name="member_delete_dialog">Do you want to delete this member?</string>
    <string name="accept_admin_dialog">Do you want to accept this admin request?</string>
    <string name="decline_admin_dialog">Do you want to decline this admin request?</string>
    <string name="accept_participant_dialog">Do you want to accept this participant request?</string>
    <string name="decline_participant_dialog">Do you want to decline this participant request?</string>
    <string name="subcommunities">Modules</string>
    <string name="request_admin_permissions">Request admin permissions</string>
    <string name="requests">Requests</string>
    <string name="participant_requests">Participant requests</string>
    <string name="other">Other</string>
    <string name="admin">Admin</string>
    <string name="admin_requests">Admin Requests</string>
    <string name="request_participant_permissions">Request participant permissions</string>
    <string name="participant">Participant</string>
    <string name="members">Members</string>
    <string name="ancestor">Ancestor</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="is_selected">Is selected</string>
    <string name="selection_mode">Selection mode</string>
    <string name="graduate">Graduate</string>
    <string name="select_all">Select all</string>
    <string name="dialog_add_graduated">Do you want to make these participants graduated</string>
    <string name="error_cant_graduate_participants">Failed to graduate participants</string>
    <string name="graduated">Graduated</string>
    <string name="graduations">Graduations</string>
    <string name="view_graduateds">View graduateds</string>
    <string name="view_participants">View Participants</string>
    <string name="show_user_class">Show your class</string>
    <string name="firstname_and_lastname">Firstname and lastname</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="use_email_and_password">Use Email and password</string>
    <string name="or">OR</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="error_sign_up">Can\'t sign up</string>
    <string name="verify_email">Please accept this dialog, verify your email from message that we sent to your email address and sign in again, to access more abilities</string>
    <string name="send_email">Send email</string>
    <string name="cancel">Not now</string>
    <string name="error_send_email_verification">Can\'t send email verification, try another time</string>
    <string name="verify_email_title">Email verification</string>
    <string name="email_not_verified">Please first verify your email</string>
    <string name="error_send_password_reset_email">Can\'t send password reset email, try another time</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="reset_password_dialog">Do you want to receive password reset email on your specified email address?</string>
    <string name="reset_password_title">Reset password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_cant_load_notification">Can\'t load notification</string>
    <string name="users_added">Users Added</string>
    <string name="users_removed">Users Removed</string>
    <string name="users_added_message">Added %d users as %s %s</string>
    <string name="users_removed_message">Removed %d users that where %s %s</string>
    <string name="title_history">History</string>
    <string name="error_cant_manage_topic_subscription">Can\'t manage topic subscription</string>
</resources>