<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.edunet.ui.screen.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.edunet.ui.screen.chats.ChatsFragment"
        tools:layout="@layout/fragment_chats"
        android:label="@string/title_chats" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.edunet.ui.screen.search.SearchFragment"
        tools:layout="@layout/fragment_search"
        android:label="@string/title_search" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.edunet.ui.screen.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_addCommunityFragment"
            app:destination="@id/addCommunityFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_profileUpdateFragment"
            app:destination="@id/profileUpdateFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.edunet.ui.screen.settings.SettingsFragment"
        tools:layout="@layout/fragment_settings"
        android:label="@string/title_settings" /><action android:id="@+id/action_global_settingsFragment" app:destination="@id/settingsFragment" />
    <fragment
        android:id="@+id/profileUpdateFragment"
        android:name="com.example.edunet.ui.screen.profile.update.ProfileUpdateFragment"
        android:label="@string/title_profile_update"
        tools:layout="@layout/fragment_profile_update" />
    <fragment
        android:id="@+id/addCommunityFragment"
        android:name="com.example.edunet.ui.screen.addcommunity.AddCommunityFragment"
        tools:layout="@layout/fragment_add_community"
        android:label="@string/title_add_community" />
    <fragment
        android:id="@+id/communityFragment"
        android:name="com.example.edunet.ui.screen.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" >
        <argument
            android:name="communityId"
            app:argType="string" />
    </fragment><action android:id="@+id/action_global_communityFragment" app:destination="@id/communityFragment">
    <argument
        android:name="communityId"
        app:argType="string" />
</action>
</navigation>