<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionGraduate"
        android:icon="@drawable/ic_upgrade_40dp"
        android:title="@string/graduate"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/selectAll"
        android:icon="@drawable/done_all_40dp"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/actionSelectionMode"
        android:icon="@drawable/ic_checklist_rtl_40dp"
        android:title="@string/selection_mode"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>