<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:hideAnimationBehavior="outward"
        app:indicatorColor="@color/primaryLoader"
        app:showAnimationBehavior="inward"
        app:trackColor="@android:color/transparent"
        app:trackCornerRadius="4dp"
        app:trackThickness="6dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/use_email_and_password"
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold|italic" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/content_holder_background"
                android:padding="35dp">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:isCredential="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:targetApi="upside_down_cake" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="name"
                    android:ems="10"
                    android:hint="@string/firstname_and_lastname"
                    android:inputType="textPersonName"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editEmail"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="password"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:isCredential="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editName"
                    app:layout_constraintVertical_bias="0.0"
                    tools:targetApi="upside_down_cake" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="password"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editPassword"
                    app:layout_constraintVertical_bias="0.0" />


                <TextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/error"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPassword"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary_button"
                    android:text="@android:string/ok"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/error"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/redirectSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/link"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/submit" />

                <TextView
                    android:id="@+id/sendPasswordResetEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/send_password_reset_email"
                    android:textColor="@color/link"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/redirectSignUp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/googleButtonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/or"
                    android:textColor="@color/text"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/googleButton"
                    style="@style/EduNet.GoogleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-black"
                    android:maxWidth="300dp"
                    android:minHeight="60dp"
                    android:padding="10dp"
                    android:text="@string/sign_in_with_google"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />


            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
