<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.community.CommunityFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:theme="@style/Theme.EduNet.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center_horizontal|bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@id/toolbar">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/community_avatar"
                android:src="@drawable/ic_default_group" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/community_toolbar_menu"
                app:popupTheme="@style/Theme.EduNet.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:fontFamily="serif"
                android:maxWidth="300dp"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/ancestor_container"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:fontFamily="serif"
                    android:text="@string/ancestor"
                    android:textColor="@color/text"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/ancestor"
                    layout="@layout/name_avatar_element"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/subcommunities_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:fontFamily="serif"
                    android:text="@string/subcommunities"
                    android:textColor="@color/text"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/subcommunities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>